fix signup page spacing

--- a/src/scss/_signup.scss
+++ b/src/scss/_signup.scss
@@ -1,8 +1,8 @@
 .signupContainer{
   margin-top: 10%;
   width: 65%;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 17.5%;
+  margin-right: 17.5%;
   text-align: center;
 }
 
